fix bug that leading slide lacks correct spacing on large screens

--- a/styles/_hero.scss
+++ b/styles/_hero.scss
@@ -74,10 +74,6 @@
         cursor: pointer;
       }
 
-      @media (min-width: 768px) {
-        margin-bottom: 6rem;
-      }
-
       @media (min-width: 992px) {
         margin: 1.938rem 0 1.125rem 0;
         padding: 5px 20px;
@@ -209,9 +205,6 @@
         cursor: pointer;
       }
 
-      @media (min-width: 768px) {
-        margin-bottom: 6rem;
-      }
 
       @media (min-width: 992px) {
         margin: 1.938rem 0 1.125rem 0;
@@ -339,10 +332,6 @@
         background-color: #2a6ec6;
         border-color: #2665b5;
         cursor: pointer;
-      }
-
-      @media (min-width: 768px) {
-        margin-bottom: 6rem;
       }
 
       @media (min-width: 992px) {
@@ -473,10 +462,6 @@
         cursor: pointer;
       }
 
-      @media (min-width: 768px) {
-        margin-bottom: 6rem;
-      }
-
       @media (min-width: 992px) {
         margin: 1.938rem 0 1.125rem 0;
         padding: 5px 20px;
@@ -603,10 +588,6 @@
         background-color: #c42e2a;
         border-color: #b32a27;
         cursor: pointer;
-      }
-
-      @media (min-width: 768px) {
-        margin-bottom: 6rem;
       }
 
       @media (min-width: 992px) {
@@ -737,10 +718,6 @@
         cursor: pointer;
       }
 
-      @media (min-width: 768px) {
-        margin-bottom: 6rem;
-      }
-
       @media (min-width: 992px) {
         margin: 1.938rem 0 1.125rem 0;
         padding: 5px 20px;
@@ -867,10 +844,6 @@
         background-color: #e80a42;
         border-color: #d4093c;
         cursor: pointer;
-      }
-
-      @media (min-width: 768px) {
-        margin-bottom: 6rem;
       }
 
       @media (min-width: 992px) {
